# sparkle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_chakraCore.bat  build_linux.sh  conanfile.txt  get_chakraCore_linux.sh  make_linux.sh
assets/: settings.ini  settings_template.ini
cmake/: Findassimp.cmake
shaders/: MRT.frag  MRT.frag.hlsl  MRT.vert  MRT.vert.hlsl  cull.comp  cull.comp.hlsl  deferred.frag.hlsl  deferred.vert.hlsl  pbr.frag.hlsl  quad.vert.hlsl  scene.frag  scene.vert  shader.frag  shader.vert  ui.frag  ui.vert
src/: AppSettings.cpp  Application.cpp  Camera.cpp  ComputePipeline.cpp  FileReader.cpp  Geometry.cpp  GraphicsPipeline.cpp  InputController.cpp  Lights.cpp  Material.cpp  RenderBackend.cpp  Shader.cpp  Texture.cpp  UI.cpp  Util.cpp  main.cpp
src/Core/: Application.cpp  Application.h  CMakeLists.txt
src/Core/ChakraJS/: SparkleChakraCore.h
src/Core/Common/: CMakeLists.txt  Camera.cpp  Camera.h  Lights.h  Material.cpp  Material.h  Texture.cpp  Texture.h
src/Core/Common/Scene/: Geometry.cpp  Geometry.h
src/Core/Input/: CMakeLists.txt  InputController.cpp  InputController.h
src/Core/Utilities/: AppSettings.cpp  AppSettings.h  CMakeLists.txt  Config.cpp  Config.h  FileReader.cpp  FileReader.h  Util.cpp  Util.h
src/Core/VkRenderer/: CMakeLists.txt  RenderBackend.cpp  RenderBackend.h
src/Core/VkRenderer/Common/: Shader.cpp  Shader.h  SparkleTypes.h  VulkanInitializers.h
src/Core/VkRenderer/Compute/: ComputePipeline.cpp  ComputePipeline.h
src/Core/VkRenderer/Draw/: GraphicsPipeline.cpp  GraphicsPipeline.h  UI.cpp  UI.h
src/Import/: AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt  GltfLoader.cpp  GltfLoader.h  SceneLoader.cpp  SceneLoader.h
src/include/: AppSettings.h  Application.h  Camera.h  ComputePipeline.h  FileReader.h  Geometry.h  GraphicsPipeline.h  InputController.h  Lights.h  Material.h  Pipeline.h  RenderBackend.h  Shader.h  SparkleChakraCore.h  SparkleTypes.h  Texture.h  UI.h  Util.h  VulkanInitializers.h
